--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,39 +1,37 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">My App</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">My App</a>
 
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Matches</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Lists</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Messages</a>
-    </li>
-    <li class="nav-item">
-      <a *ngIf="loggedIn()" (click)="logout()" class="nav-link" href="#">Logout</a>
-    </li>
-  </ul>
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Matches</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Lists</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Messages</a>
+      </li>
+    </ul>
 
-  <!-- ngIf is a structural directive and a structural directive always has * -->
-  <div *ngIf="loggedIn()" class="dropdown">
-    <a class="dropdown-toggle text-light">
-      Welcome {{ model.username }}
-    </a>
-    
-    <div class="dropdown-menu">
-      <a href="#" class="dropdown-item"><i class="fa fa-user"></i> Edit Profile</a>
-      <div class="dropdown-divider"></div>
-      <a href="#" class="dropdown-item"><i class="fa fa-sign-out"></i> Logout</a>
+    <!-- ngIf is a structural directive and a structural directive always has * -->
+    <div *ngIf="loggedIn()" class="dropdown" dropdown style="cursor: pointer;">
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{ authService.decodedToken?.unique_name | titlecase }}  <!--? makes unique_name property optional-->
+      </a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a href="javascript:void(0)" class="dropdown-item"><i class="fa fa-user"></i> Edit Profile</a>
+        <div class="dropdown-divider"></div>
+        <a *ngIf="loggedIn()" (click)="logout()" href="javascript:void(0)" class="dropdown-item"><i class="fa fa-sign-out"></i> Logout</a>
+      </div>
     </div>
-  </div>
 
-  <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-    <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" #username="ngModel" required [(ngModel)]="model.username">
-    <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" #password="ngModel" required [(ngModel)]="model.password">
-    <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-  </form>
+    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+      <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" #username="ngModel" required [(ngModel)]="model.username">
+      <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" #password="ngModel" required [(ngModel)]="model.password">
+      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+    </form>
+  </div>
 </nav>
 
 <!-- These are the types of form validations in angular -->
